Fixed alignment in tables cells

--- a/static/mywatch.css
+++ b/static/mywatch.css
@@ -1,7 +1,8 @@
 #serverList li { display: inline-block; }
+table td { text-align:center; }
 table td.btn { opacity:0; max-width:1em; }
 table th { text-align: center; }
 table tr:hover td.btn { opacity:1; }
 table#processList td { white-space: nowrap; }
 table#processList td.mywatch-number { text-align: right; }
-table#processList td.mywatch-query { white-space: pre-wrap; }
+table#processList td.mywatch-query { text-align: left; white-space: pre-wrap; }
